--- a/style.css
+++ b/style.css
@@ -41,10 +41,17 @@ a{
     text-decoration: none;
     display: inline-block;
 }
+ul{
+    list-style: none;
+}
 .container{
     max-width: 1180px;
     margin-inline: auto;
     
+}
+.flex{
+    display: flex;
+    align-items: center;
 }
 /*top banner */
 .top-banner{
@@ -58,4 +65,27 @@ a{
     text-align: center;
     font-size: .75rem;
 
+}
+.logo img {
+    width: 200px;
+}
+.main-nav {
+    margin-top: 20px;
+    justify-content: space-between;
+}
+.hover-links{
+    flex-basis: 730px;
+}
+.hover-links ul{
+    justify-content: end;
+    gap: 40px;
+}
+
+.hover-link{
+    color: var(--primary-text-color);
+    text-transform: capitalize;
+    transition: 0.2s ease-out;
+}
+.hover-link:hover {
+    color: var(--accent-color);
 }
